loki/LokiParser.py
# Generated from Loki.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class LokiParser ( Parser ):

    grammarFileName = "Loki.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'<<'", "'>>'", "'['", "']'", "'!'", "'/'", 
                     "'='", "'\"'", "'<'", "'>'", "'word'", "'lemma'", "'tag'", 
                     "'chunk'", "'entity'", "'mention'", "'incoming'", "'outgoing'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "OPEN_TC", 
                      "CLOSE_TC", "NEGATED", "SLASH", "EQUAL", "QUOTE", 
                      "INCOMING_DEP", "OUTGOING_DEP", "WORD", "LEMMA", "TAG", 
                      "CHUNK", "ENTITY", "MENTION", "INCOMING", "OUTGOING", 
                      "LETTER", "DIGIT", "PUNCT", "WHITESPACE" ]

    RULE_loki_pattern = 0
    RULE_graph_traversal = 1
    RULE_incoming_wildcard = 2
    RULE_outgoing_wildcard = 3
    RULE_incoming_traversal = 4
    RULE_outgoing_traversal = 5
    RULE_surface_pattern = 6
    RULE_token_wildcard = 7
    RULE_token_constraint = 8
    RULE_negated_attribute_constraint = 9
    RULE_attribute_constraint = 10
    RULE_pattern = 11
    RULE_pattern_regex = 12
    RULE_pattern_literal = 13
    RULE_inner_pattern = 14
    RULE_regex = 15
    RULE_literal = 16
    RULE_token_attribute = 17

    ruleNames =  [ "loki_pattern", "graph_traversal", "incoming_wildcard", 
                   "outgoing_wildcard", "incoming_traversal", "outgoing_traversal", 
                   "surface_pattern", "token_wildcard", "token_constraint", 
                   "negated_attribute_constraint", "attribute_constraint", 
                   "pattern", "pattern_regex", "pattern_literal", "inner_pattern", 
                   "regex", "literal", "token_attribute" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    OPEN_TC=3
    CLOSE_TC=4
    NEGATED=5
    SLASH=6
    EQUAL=7
    QUOTE=8
    INCOMING_DEP=9
    OUTGOING_DEP=10
    WORD=11
    LEMMA=12
    TAG=13
    CHUNK=14
    ENTITY=15
    MENTION=16
    INCOMING=17
    OUTGOING=18
    LETTER=19
    DIGIT=20
    PUNCT=21
    WHITESPACE=22

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class Loki_patternContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def surface_pattern(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LokiParser.Surface_patternContext)
            else:
                return self.getTypedRuleContext(LokiParser.Surface_patternContext,i)


        def graph_traversal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LokiParser.Graph_traversalContext)
            else:
                return self.getTypedRuleContext(LokiParser.Graph_traversalContext,i)


        def getRuleIndex(self):
            return LokiParser.RULE_loki_pattern

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoki_pattern" ):
                listener.enterLoki_pattern(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoki_pattern" ):
                listener.exitLoki_pattern(self)




    def loki_pattern(self):

        localctx = LokiParser.Loki_patternContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_loki_pattern)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 38
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [LokiParser.OPEN_TC]:
                    self.state = 36
                    self.surface_pattern()
                    pass
                elif token in [LokiParser.T__0, LokiParser.T__1, LokiParser.INCOMING_DEP, LokiParser.OUTGOING_DEP]:
                    self.state = 37
                    self.graph_traversal()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 40 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LokiParser.T__0) | (1 << LokiParser.T__1) | (1 << LokiParser.OPEN_TC) | (1 << LokiParser.INCOMING_DEP) | (1 << LokiParser.OUTGOING_DEP))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Graph_traversalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def incoming_traversal(self):
            return self.getTypedRuleContext(LokiParser.Incoming_traversalContext,0)


        def outgoing_traversal(self):
            return self.getTypedRuleContext(LokiParser.Outgoing_traversalContext,0)


        def incoming_wildcard(self):
            return self.getTypedRuleContext(LokiParser.Incoming_wildcardContext,0)


        def outgoing_wildcard(self):
            return self.getTypedRuleContext(LokiParser.Outgoing_wildcardContext,0)


        def getRuleIndex(self):
            return LokiParser.RULE_graph_traversal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGraph_traversal" ):
                listener.enterGraph_traversal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGraph_traversal" ):
                listener.exitGraph_traversal(self)




    def graph_traversal(self):

        localctx = LokiParser.Graph_traversalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_graph_traversal)
        try:
            self.state = 46
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LokiParser.INCOMING_DEP]:
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.incoming_traversal()
                pass
            elif token in [LokiParser.OUTGOING_DEP]:
                self.enterOuterAlt(localctx, 2)
                self.state = 43
                self.outgoing_traversal()
                pass
            elif token in [LokiParser.T__0]:
                self.enterOuterAlt(localctx, 3)
                self.state = 44
                self.incoming_wildcard()
                pass
            elif token in [LokiParser.T__1]:
                self.enterOuterAlt(localctx, 4)
                self.state = 45
                self.outgoing_wildcard()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Incoming_wildcardContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LokiParser.RULE_incoming_wildcard

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIncoming_wildcard" ):
                listener.enterIncoming_wildcard(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIncoming_wildcard" ):
                listener.exitIncoming_wildcard(self)




    def incoming_wildcard(self):

        localctx = LokiParser.Incoming_wildcardContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_incoming_wildcard)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(LokiParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Outgoing_wildcardContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LokiParser.RULE_outgoing_wildcard

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOutgoing_wildcard" ):
                listener.enterOutgoing_wildcard(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOutgoing_wildcard" ):
                listener.exitOutgoing_wildcard(self)




    def outgoing_wildcard(self):

        localctx = LokiParser.Outgoing_wildcardContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_outgoing_wildcard)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(LokiParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Incoming_traversalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pattern(self):
            return self.getTypedRuleContext(LokiParser.PatternContext,0)


        def getRuleIndex(self):
            return LokiParser.RULE_incoming_traversal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIncoming_traversal" ):
                listener.enterIncoming_traversal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIncoming_traversal" ):
                listener.exitIncoming_traversal(self)




    def incoming_traversal(self):

        localctx = LokiParser.Incoming_traversalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_incoming_traversal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(LokiParser.INCOMING_DEP)
            self.state = 53
            self.pattern()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Outgoing_traversalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pattern(self):
            return self.getTypedRuleContext(LokiParser.PatternContext,0)


        def getRuleIndex(self):
            return LokiParser.RULE_outgoing_traversal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOutgoing_traversal" ):
                listener.enterOutgoing_traversal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOutgoing_traversal" ):
                listener.exitOutgoing_traversal(self)




    def outgoing_traversal(self):

        localctx = LokiParser.Outgoing_traversalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_outgoing_traversal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(LokiParser.OUTGOING_DEP)
            self.state = 56
            self.pattern()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Surface_patternContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def token_wildcard(self):
            return self.getTypedRuleContext(LokiParser.Token_wildcardContext,0)


        def token_constraint(self):
            return self.getTypedRuleContext(LokiParser.Token_constraintContext,0)


        def getRuleIndex(self):
            return LokiParser.RULE_surface_pattern

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSurface_pattern" ):
                listener.enterSurface_pattern(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSurface_pattern" ):
                listener.exitSurface_pattern(self)




    def surface_pattern(self):

        localctx = LokiParser.Surface_patternContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_surface_pattern)
        try:
            self.state = 60
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.token_wildcard()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 59
                self.token_constraint()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Token_wildcardContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHITESPACE(self):
            return self.getToken(LokiParser.WHITESPACE, 0)

        def getRuleIndex(self):
            return LokiParser.RULE_token_wildcard

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterToken_wildcard" ):
                listener.enterToken_wildcard(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitToken_wildcard" ):
                listener.exitToken_wildcard(self)




    def token_wildcard(self):

        localctx = LokiParser.Token_wildcardContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_token_wildcard)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(LokiParser.OPEN_TC)
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LokiParser.WHITESPACE:
                self.state = 63
                self.match(LokiParser.WHITESPACE)


            self.state = 66
            self.match(LokiParser.CLOSE_TC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Token_constraintContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute_constraint(self):
            return self.getTypedRuleContext(LokiParser.Attribute_constraintContext,0)


        def negated_attribute_constraint(self):
            return self.getTypedRuleContext(LokiParser.Negated_attribute_constraintContext,0)


        def getRuleIndex(self):
            return LokiParser.RULE_token_constraint

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterToken_constraint" ):
                listener.enterToken_constraint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitToken_constraint" ):
                listener.exitToken_constraint(self)




    def token_constraint(self):

        localctx = LokiParser.Token_constraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_token_constraint)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(LokiParser.OPEN_TC)
            self.state = 71
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LokiParser.WORD, LokiParser.LEMMA, LokiParser.TAG, LokiParser.CHUNK, LokiParser.ENTITY, LokiParser.MENTION, LokiParser.INCOMING, LokiParser.OUTGOING]:
                self.state = 69
                self.attribute_constraint()
                pass
            elif token in [LokiParser.NEGATED]:
                self.state = 70
                self.negated_attribute_constraint()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 73
            self.match(LokiParser.CLOSE_TC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Negated_attribute_constraintContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEGATED(self):
            return self.getToken(LokiParser.NEGATED, 0)

        def attribute_constraint(self):
            return self.getTypedRuleContext(LokiParser.Attribute_constraintContext,0)


        def getRuleIndex(self):
            return LokiParser.RULE_negated_attribute_constraint

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNegated_attribute_constraint" ):
                listener.enterNegated_attribute_constraint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNegated_attribute_constraint" ):
                listener.exitNegated_attribute_constraint(self)




    def negated_attribute_constraint(self):

        localctx = LokiParser.Negated_attribute_constraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_negated_attribute_constraint)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(LokiParser.NEGATED)
            self.state = 76
            self.attribute_constraint()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Attribute_constraintContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def token_attribute(self):
            return self.getTypedRuleContext(LokiParser.Token_attributeContext,0)


        def EQUAL(self):
            return self.getToken(LokiParser.EQUAL, 0)

        def pattern(self):
            return self.getTypedRuleContext(LokiParser.PatternContext,0)


        def getRuleIndex(self):
            return LokiParser.RULE_attribute_constraint

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttribute_constraint" ):
                listener.enterAttribute_constraint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttribute_constraint" ):
                listener.exitAttribute_constraint(self)




    def attribute_constraint(self):

        localctx = LokiParser.Attribute_constraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_attribute_constraint)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.token_attribute()
            self.state = 79
            self.match(LokiParser.EQUAL)
            self.state = 80
            self.pattern()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PatternContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pattern_regex(self):
            return self.getTypedRuleContext(LokiParser.Pattern_regexContext,0)


        def pattern_literal(self):
            return self.getTypedRuleContext(LokiParser.Pattern_literalContext,0)


        def getRuleIndex(self):
            return LokiParser.RULE_pattern

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPattern" ):
                listener.enterPattern(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPattern" ):
                listener.exitPattern(self)




    def pattern(self):

        localctx = LokiParser.PatternContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_pattern)
        try:
            self.state = 84
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LokiParser.SLASH]:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.pattern_regex()
                pass
            elif token in [LokiParser.QUOTE, LokiParser.LETTER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.pattern_literal()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Pattern_regexContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SLASH(self, i:int=None):
            if i is None:
                return self.getTokens(LokiParser.SLASH)
            else:
                return self.getToken(LokiParser.SLASH, i)

        def regex(self):
            return self.getTypedRuleContext(LokiParser.RegexContext,0)


        def getRuleIndex(self):
            return LokiParser.RULE_pattern_regex

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPattern_regex" ):
                listener.enterPattern_regex(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPattern_regex" ):
                listener.exitPattern_regex(self)




    def pattern_regex(self):

        localctx = LokiParser.Pattern_regexContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_pattern_regex)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(LokiParser.SLASH)
            self.state = 87
            self.regex()
            self.state = 88
            self.match(LokiParser.SLASH)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Pattern_literalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUOTE(self, i:int=None):
            if i is None:
                return self.getTokens(LokiParser.QUOTE)
            else:
                return self.getToken(LokiParser.QUOTE, i)

        def literal(self):
            return self.getTypedRuleContext(LokiParser.LiteralContext,0)


        def PUNCT(self, i:int=None):
            if i is None:
                return self.getTokens(LokiParser.PUNCT)
            else:
                return self.getToken(LokiParser.PUNCT, i)

        def getRuleIndex(self):
            return LokiParser.RULE_pattern_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPattern_literal" ):
                listener.enterPattern_literal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPattern_literal" ):
                listener.exitPattern_literal(self)




    def pattern_literal(self):

        localctx = LokiParser.Pattern_literalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_pattern_literal)
        self._la = 0 # Token type
        try:
            self.state = 103
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LokiParser.QUOTE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.match(LokiParser.QUOTE)
                self.state = 99
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [LokiParser.PUNCT]:
                    self.state = 92 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 91
                        self.match(LokiParser.PUNCT)
                        self.state = 94 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==LokiParser.PUNCT):
                            break

                    pass
                elif token in [LokiParser.QUOTE]:
                    self.state = 96
                    self.match(LokiParser.QUOTE)
                    pass
                elif token in [LokiParser.SLASH]:
                    self.state = 97
                    self.match(LokiParser.SLASH)
                    pass
                elif token in [LokiParser.LETTER]:
                    self.state = 98
                    self.literal()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 101
                self.match(LokiParser.QUOTE)
                pass
            elif token in [LokiParser.LETTER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.literal()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Inner_patternContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(LokiParser.LiteralContext,0)


        def regex(self):
            return self.getTypedRuleContext(LokiParser.RegexContext,0)


        def getRuleIndex(self):
            return LokiParser.RULE_inner_pattern

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInner_pattern" ):
                listener.enterInner_pattern(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInner_pattern" ):
                listener.exitInner_pattern(self)




    def inner_pattern(self):

        localctx = LokiParser.Inner_patternContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_inner_pattern)
        try:
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.literal()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.regex()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RegexContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PUNCT(self, i:int=None):
            if i is None:
                return self.getTokens(LokiParser.PUNCT)
            else:
                return self.getToken(LokiParser.PUNCT, i)

        def LETTER(self, i:int=None):
            if i is None:
                return self.getTokens(LokiParser.LETTER)
            else:
                return self.getToken(LokiParser.LETTER, i)

        def DIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(LokiParser.DIGIT)
            else:
                return self.getToken(LokiParser.DIGIT, i)

        def getRuleIndex(self):
            return LokiParser.RULE_regex

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegex" ):
                listener.enterRegex(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegex" ):
                listener.exitRegex(self)




    def regex(self):

        localctx = LokiParser.RegexContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_regex)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 109
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LokiParser.LETTER) | (1 << LokiParser.DIGIT) | (1 << LokiParser.PUNCT))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 112 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LokiParser.LETTER) | (1 << LokiParser.DIGIT) | (1 << LokiParser.PUNCT))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LETTER(self, i:int=None):
            if i is None:
                return self.getTokens(LokiParser.LETTER)
            else:
                return self.getToken(LokiParser.LETTER, i)

        def DIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(LokiParser.DIGIT)
            else:
                return self.getToken(LokiParser.DIGIT, i)

        def PUNCT(self, i:int=None):
            if i is None:
                return self.getTokens(LokiParser.PUNCT)
            else:
                return self.getToken(LokiParser.PUNCT, i)

        def getRuleIndex(self):
            return LokiParser.RULE_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteral" ):
                listener.enterLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteral" ):
                listener.exitLiteral(self)




    def literal(self):

        localctx = LokiParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_literal)
        self._la = 0 # Token type
        try:
            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.match(LokiParser.LETTER)
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==LokiParser.DIGIT or _la==LokiParser.PUNCT:
                    self.state = 115
                    _la = self._input.LA(1)
                    if not(_la==LokiParser.DIGIT or _la==LokiParser.PUNCT):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 120
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 121
                self.match(LokiParser.LETTER)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self.match(LokiParser.LETTER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Token_attributeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self):
            return self.getToken(LokiParser.WORD, 0)

        def LEMMA(self):
            return self.getToken(LokiParser.LEMMA, 0)

        def TAG(self):
            return self.getToken(LokiParser.TAG, 0)

        def CHUNK(self):
            return self.getToken(LokiParser.CHUNK, 0)

        def ENTITY(self):
            return self.getToken(LokiParser.ENTITY, 0)

        def MENTION(self):
            return self.getToken(LokiParser.MENTION, 0)

        def INCOMING(self):
            return self.getToken(LokiParser.INCOMING, 0)
